implemented removing ingredients

--- a/src/main/resources/templates/ingredient/ingredientDetails.html
+++ b/src/main/resources/templates/ingredient/ingredientDetails.html
@@ -6,5 +6,17 @@
 </head>
 <body>
 
+<ul>
+  <li>
+    <span th:text="${ingredient.getId()}"></span>
+    <span th:text="${ingredient.name}"></span>
+    <span th:text="${ingredient.unit}"></span>
+    <!--      <a th:href="|/edytuj?id=${meal.id}|">Edytuj</a>-->
+    <!--      <a th:href="|/usun?id=${meal.id}|">Usuń</a>-->
+  </li>
+</ul>
+
+<a href="/ingredients/">powrót</a>
+
 </body>
 </html>
