implemented adding recipes without ingredients

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org" >
+<html lang="en">
 <head>
   <meta charset="UTF-8">
   <title>Witaj w bibliotece książek kucharskich!</title>
@@ -12,7 +12,7 @@
 
 <ul>
   <li>Książki</li>
-  <li>Przepisy</li>
+  <li><a href="/recipes/">Przepisy</a></li>
   <li><a href="/ingredients/">Skladniki</a></li>
 </ul>
 
