--- a/src/main/resources/templates/ingredient/addIngredientForm.html
+++ b/src/main/resources/templates/ingredient/addIngredientForm.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en">
 <head>
   <meta charset="UTF-8">
   <title>Title</title>
@@ -9,12 +9,12 @@
 
 <form action="/ingredients/add" method="post">
 
-  <input type="text" name="name"/>
+  <input name="name" type="text"/>
 
-  <select name="unit">
-    <option value="GRAM">GRAM</option>
-    <option value="MILILITER">MILILITER</option>
-  </select>
+<!--  <select name="unit">-->
+<!--    <option value="GRAM">GRAM</option>-->
+<!--    <option value="MILILITER">MILILITER</option>-->
+<!--  </select>-->
 
   <button type="submit">Dodaj</button>
 </form>
