added recipe edition - basic functionality

--- a/src/main/resources/templates/recipe/recipes.html
+++ b/src/main/resources/templates/recipe/recipes.html
@@ -10,6 +10,7 @@
   <li>
     <a th:href="@{'/recipes/'+${recipe.id}}"><span th:text="${recipe.getName()}"></span></a>
     <img th:alt="${recipe.getName()}" th:src="${recipe.getPhotoURL()}"/>
+    <a th:href="@{'/recipes/'+${recipe.id}+'/edit'}">Edytuj</a>
   </li>
 </ul>
 
