--- a/src/main/resources/templates/recipe/recipes.html
+++ b/src/main/resources/templates/recipe/recipes.html
@@ -11,6 +11,7 @@
     <a th:href="@{'/recipes/'+${recipe.id}}"><span th:text="${recipe.getName()}"></span></a>
     <img th:alt="${recipe.getName()}" th:src="${recipe.getPhotoURL()}"/>
     <a th:href="@{'/recipes/'+${recipe.id}+'/edit'}">Edytuj</a>
+    <a th:href="@{'/recipes/'+${recipe.id}+'/delete'}">Usun</a>
   </li>
 </ul>
 
