added recipeingredient controller

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -14,6 +14,7 @@
   <li>Książki</li>
   <li><a href="/recipes/">Przepisy</a></li>
   <li><a href="/ingredients/">Skladniki</a></li>
+  <li><a href="/recipeingredient/">RecipeIngredients</a></li>
 </ul>
 
 </body>
