added breadcrumbs to all sites

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -3,8 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <title>Witaj w bibliotece książek kucharskich!</title>
+  <link rel="stylesheet" type="text/css" th:href="@{/css/style.css}"/>
 </head>
 <body>
+<div th:replace="topmenufragment :: header"></div>
 
 <h1>Witaj w bibliotece książek kucharskich !!!!</h1>
 <h2>Szef Tomasz zaprasza !!!!</h2>
