--- a/src/main/resources/templates/recipeIngredient/recipeIngredientDetails.html
+++ b/src/main/resources/templates/recipeIngredient/recipeIngredientDetails.html
@@ -4,6 +4,7 @@
   <link rel="stylesheet" type="text/css" th:href="@{/css/style.css}"/>
   <meta charset="UTF-8">
   <title>Title</title>
+  <link rel="stylesheet" type="text/css" th:href="@{/css/style.css}"/>
 </head>
 <body>
 <div th:replace="topmenufragment :: header"></div>
