--- a/src/main/resources/templates/ingredient/addIngredientForm.html
+++ b/src/main/resources/templates/ingredient/addIngredientForm.html
@@ -3,9 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <title>Title</title>
+  <link rel="stylesheet" type="text/css" th:href="@{/css/style.css}"/>
 </head>
 <body>
-
+<div th:replace="topmenufragment :: header"></div>
 
 <form action="/ingredients/add" method="post">
 
