--- a/src/main/resources/templates/ingredient/ingredients.html
+++ b/src/main/resources/templates/ingredient/ingredients.html
@@ -3,8 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <title>Title</title>
+  <link rel="stylesheet" type="text/css" th:href="@{/css/style.css}"/>
 </head>
 <body>
+<div th:replace="topmenufragment :: header"></div>
+
 <h1>Skladniki</h1>
 
 
