added likes and dislikes for recipes

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -22,5 +22,7 @@
   <li><a href="/recipeingredient/">RecipeIngredients</a></li>
 </ul>
 
+<div th:replace="topmenufragment :: footer"></div>
+
 </body>
 </html>
