--- a/src/main/resources/templates/ingredient/editIngredientForm.html
+++ b/src/main/resources/templates/ingredient/editIngredientForm.html
@@ -23,7 +23,7 @@
 <!--  </select>-->
 
   <input type="submit" value="Zapisz zmiany"/>
-
-
+</form>
+  <div th:replace="topmenufragment :: footer"></div>
 </body>
 </html>
