--- a/src/main/resources/templates/recipeIngredient/recipeIngredients.html
+++ b/src/main/resources/templates/recipeIngredient/recipeIngredients.html
@@ -44,5 +44,7 @@
 
 <a href="/">powrót do menu</a>
 <a href="/ingredients/add">dodaj nowy składnik</a>
+
+<div th:replace="topmenufragment :: footer"></div>
 </body>
 </html>
