--- a/src/main/resources/templates/topmenufragment.html
+++ b/src/main/resources/templates/topmenufragment.html
@@ -24,8 +24,10 @@
 </div>
 
 <div class="footer" th:fragment="footer">
+  <h1>Footer</h1>
   Tomasz Lach
   All Rigths reserved
+  <h1>Footer</h1>
 </div>
 
 </body>
