--- a/src/main/resources/templates/ingredient/ingredients.html
+++ b/src/main/resources/templates/ingredient/ingredients.html
@@ -40,5 +40,7 @@
 
 <a href="/">powrót do menu</a>
 <a href="/ingredients/add">dodaj nowy składnik</a>
+
+<div th:replace="topmenufragment :: footer"></div>
 </body>
 </html>
