implemented partially addin ingredients to recipe in edit window - it will never be possible to doit in add window.

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -23,7 +23,7 @@ ul.breadcrumbs li span {
 }
 
 .footer {
-    position: fixed;
-    bottom: 0px;
+    /*position: fixed;*/
+    /*bottom: 0px;*/
 }
 
